Fixed card width issue for slider. Improved Apply as an Artist top right registering box spacing

--- a/src/assets/styles/flashflex/components/_card.scss
+++ b/src/assets/styles/flashflex/components/_card.scss
@@ -29,9 +29,7 @@
 
 	.content {
 		height: 4rem;
-		// width: 150px;
-		// setting to 100% for slider pixel perfect layout.
-		width: 100%;
+		width: 150px;
 
 		margin-top: 11px; // match with prototype
 		// margin-top: 12.8px;
@@ -74,9 +72,7 @@
 	// Card variations
 	&.square {
 		.image {
-			// width: 150px;
-			// setting to 100% for slider pixel perfect layout.
-			width: 100%;
+			width: 150px;
 			height: 150px;
 		}
 	}
