--- a/src/assets/styles/flashflex/pages/_apply-artist.scss
+++ b/src/assets/styles/flashflex/pages/_apply-artist.scss
@@ -123,7 +123,7 @@
 				width: 400px;
 
 				.box-inner {
-					padding: p(30) p(40) p(10);
+					padding: p(30) p(40);
 					box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.16);
 					border-top: 3px solid color(primary);
 					background-color: #fff;
